ハンバーガーメニュー機能修正

--- a/MyYouTube.html
+++ b/MyYouTube.html
@@ -15,11 +15,25 @@
       <div class="header-left">
         <a href="#"><img class="logo" src="./images/MyYouTube.png">YouTube検索</a>
       </div>
-      <span class="fa fa-bars menu-icon"></span>
+      <input type="checkbox" id="menu-btn-check">
+      <label for="menu-btn-check" class="menu-btn"><span class="fa fa-bars menu-icon"></span><span class="fa fa-times menu-icon-close"></span></label>
       <div class="header-right">
         <a href="#">概要</a>
         <a href="#section1">機能</a>
         <a href="#section2" class="login">お問い合わせ</a>
+      </div>
+      <div class="menu-content">
+        <ul>
+          <li>
+            <a href="#">概要</a>
+          </li>
+          <li>
+            <a href="#section1">機能</a>
+          </li>
+          <li>
+            <a href="#section2">お問い合わせ</a>
+          </li>
+        </ul>
       </div>
     </div>
   </header>
