APIキーの取得方法追加

--- a/MyTranslation.html
+++ b/MyTranslation.html
@@ -41,7 +41,7 @@
     <div class="container">
       <h1>概要</h1>
       <p>洋書翻訳カメラはカメラで撮影した洋書の文字を翻訳するアプリです。<br>英語から日本語に翻訳します。<br>翻訳結果は<br>ファイルアプリ/ブラウズ/このiPhone内/当アプリ/(ホーム画面で指定したフォルダ)/(ホーム画面で指定したページ).txt<br>に保存されます。</p>
-      <p class="text-danger">アプリ内でDeepLのAPIを利用するためDeepLのアカウントを作成してAPIキーを取得する必要があります。<br>アカウントは無料と有料があります。<br>無料の場合翻訳文字数に制限があります。2024年時点で1ヶ月に500,000文字まで翻訳できます。<br>有料の場合翻訳文字数に制限はありませんが利用料金が掛かりますのでご注意ください。2024年時点で月額基本料金と翻訳文字数に応じた料金が掛かります。</p>
+      <p class="text-danger">アプリ内でDeepL APIを利用するためDeepLのアカウントを作成してAPIキーを取得する必要があります。<br>APIキーの取得方法はブラウザで「deepl apiキー 取得方法」などで検索して調べてください。(APIキーの取得方法の記事の例は<a href="https://auto-worker.com/blog/?p=5030">こちら</a>)<br>アカウントは無料と有料があります。<br>無料の場合翻訳文字数に制限があります。2024年時点で1ヶ月に500,000文字まで翻訳できます。<br>有料の場合翻訳文字数に制限はありませんが利用料金が掛かりますのでご注意ください。2024年時点で月額基本料金と翻訳文字数に応じた料金が掛かります。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
