--- a/MyYouTube.html
+++ b/MyYouTube.html
@@ -41,7 +41,7 @@
     <div class="container">
       <h1>概要</h1>
       <p>YouTube検索は指定した検索条件でYouTubeを検索するアプリです。<br>検索結果を一覧表示します。<br>検索結果一覧画面でタップした項目の詳細をアプリ内ブラウザで表示します。</p>
-      <p class="text-danger">アプリ内でYouTube Data APIを利用するためAPIキーを取得する必要があります。<br>APIキーは無料で取得できます。<br>検索回数に制限があります。2024年時点で1ヶ月に約100回まで検索できます。</p>
+      <p class="text-danger">アプリ内でYouTube Data APIを利用するためAPIキーを取得する必要があります。<br>APIキーの取得方法はブラウザで「youtube data apiキー 取得方法」などで検索して調べてください。(APIキーの取得方法の記事の例は<a href="https://kitaka-web.com/youtube-data-api/">こちら</a>)<br>APIキーは無料で取得できます。<br>検索回数に制限があります。2024年時点で1ヶ月に約100回まで検索できます。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
