名前、サブタイトル修正

--- a/MyYouTube.html
+++ b/MyYouTube.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#"><img class="logo" src="./images/MyYouTube.png">YouTube検索</a>
+        <a href="#"><img class="logo" src="./images/MyYouTube.png">動画検索</a>
       </div>
       <input type="checkbox" id="menu-btn-check">
       <label for="menu-btn-check" class="menu-btn"><span class="fa fa-bars menu-icon"></span><span class="fa fa-times menu-icon-close"></span></label>
@@ -40,7 +40,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-      <p>YouTube検索は指定した検索条件でYouTubeを検索するアプリです。<br>検索結果を一覧表示します。<br>検索結果一覧画面でタップした項目の詳細をアプリ内ブラウザで表示します。</p>
+      <p>動画検索は指定した検索条件で動画を検索するアプリです。<br>検索結果を一覧表示します。<br>検索結果一覧画面でタップした項目の詳細をアプリ内ブラウザで表示します。</p>
       <p class="text-danger">アプリ内でYouTube Data APIを利用するためAPIキーを取得する必要があります。<br>APIキーの取得方法はブラウザで「youtube data apiキー 取得方法」などで検索して調べてください。(APIキーの取得方法の記事の例は<a href="https://kitaka-web.com/youtube-data-api/">こちら</a>)<br>APIキーは無料で取得できます。<br>検索回数に制限があります。2024年時点で1ヶ月に約100回まで検索できます。</p>
     </div>
   </div>
@@ -84,7 +84,7 @@
   <footer>
     <div class="container">
       <img src="./images/MyYouTube.png">
-      <p>YouTube検索</p>
+      <p>動画検索</p>
       <p><a href="./index.html">プライバシーポリシー</a></p>
     </div>
   </footer>
