--- a/MyGourmetMap.html
+++ b/MyGourmetMap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>グルメマップ</title>
+  <title>HPグルメマップ</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="stylesheet4Columns.css">
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#"><img class="logo" src="./images/MyGourmetMap.png">グルメマップ</a>
+        <a href="#"><img class="logo" src="./images/MyGourmetMap.png">HPグルメマップ</a>
       </div>
       <input type="checkbox" id="menu-btn-check">
       <label for="menu-btn-check" class="menu-btn"><span class="fa fa-bars menu-icon"></span><span class="fa fa-times menu-icon-close"></span></label>
@@ -41,7 +41,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-        <p>グルメマップは指定した検索条件で飲食店を検索する地図アプリです。<br>検索結果のお店を表示します。<br>ホーム画面の地図タブでタップしたお店の詳細、クーポンをアプリ内ブラウザで表示します。<br>アプリ内でホットペッパーグルメAPIを利用します。</p>
+        <p>HPグルメマップは指定した検索条件で飲食店を検索する地図アプリです。<br>検索結果のお店を表示します。<br>ホーム画面の地図タブでタップしたお店の詳細、クーポンをアプリ内ブラウザで表示します。<br>アプリ内でホットペッパーグルメAPIを利用します。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
@@ -90,7 +90,7 @@
   <footer>
     <div class="container">
       <img src="./images/MyGourmetMap.png">
-      <p>グルメマップ</p>
+      <p>HPグルメマップ</p>
       <p><a href="./index.html">プライバシーポリシー</a></p>
     </div>
   </footer>
