--- a/MyGourmetMap.html
+++ b/MyGourmetMap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HPグルメマップ</title>
+  <title>グルメメモマップ</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" type="text/css" href="stylesheet4Columns.css">
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#"><img class="logo" src="./images/MyGourmetMap.png">HPグルメマップ</a>
+        <a href="#"><img class="logo" src="./images/MyGourmetMap.png">グルメメモマップ</a>
       </div>
       <input type="checkbox" id="menu-btn-check">
       <label for="menu-btn-check" class="menu-btn"><span class="fa fa-bars menu-icon"></span><span class="fa fa-times menu-icon-close"></span></label>
@@ -41,7 +41,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-        <p>HPグルメマップは指定した検索条件で飲食店を検索する地図アプリです。<br>検索結果のお店を表示します。<br>ホーム画面の地図タブでタップしたお店の詳細、クーポンをアプリ内ブラウザで表示します。<br>アプリ内でホットペッパーグルメAPIを利用します。</p>
+        <p>グルメメモマップは指定した検索条件で飲食店を検索してメモを取れる地図アプリです。<br>検索結果のお店を表示します。<br>ホーム画面の地図タブでタップしたお店の詳細、クーポンをアプリ内ブラウザで表示します。<br>ホーム画面の地図タブでタップしたお店のメモを登録、更新、削除できます。<br>ホーム画面のメモタブでメモを一覧表示します。<br>ホーム画面のメモタブでタップした項目の詳細をお店画面のメモタブで表示します。<br>アプリ内でホットペッパーグルメAPIを利用します。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
@@ -54,7 +54,7 @@
           <div class="lesson-icon">
             <a href="./images/MyGourmetMap_0001.PNG"><img src="./images/MyGourmetMap_0001.PNG"></a>
           </div>
-          <p class="text-contents">ホーム画面の地図タブです。検索結果のお店を表示します。キーワード(東京駅など)検索などができます。</p>
+          <p class="text-contents">ホーム画面の地図タブです。検索結果のお店を表示します。キーワード(東京駅など)検索などができます。メモを取ったお店は緑色のマーカーで表示します。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
@@ -66,13 +66,25 @@
           <div class="lesson-icon">
             <a href="./images/MyGourmetMap_0003.PNG"><img src="./images/MyGourmetMap_0003.PNG"></a>
           </div>
-          <p class="text-contents">お店画面のホームタブです。ホーム画面の地図タブでタップしたお店の詳細をアプリ内ブラウザで表示します。</p>
+          <p class="text-contents">ホーム画面のメモタブです。メモを一覧表示します。タップした項目の詳細をお店画面のメモタブで表示します。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <a href="./images/MyGourmetMap_0004.PNG"><img src="./images/MyGourmetMap_0004.PNG"></a>
           </div>
+          <p class="text-contents">お店画面のホームタブです。ホーム画面の地図タブでタップしたお店の詳細をアプリ内ブラウザで表示します。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <a href="./images/MyGourmetMap_0005.PNG"><img src="./images/MyGourmetMap_0005.PNG"></a>
+          </div>
           <p class="text-contents">お店画面のクーポンタブです。ホーム画面の地図タブでタップしたお店のクーポンをアプリ内ブラウザで表示します。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <a href="./images/MyGourmetMap_0006.PNG"><img src="./images/MyGourmetMap_0006.PNG"></a>
+          </div>
+          <p class="text-contents">お店画面のメモタブです。ホーム画面の地図タブでタップしたお店のメモを登録、更新、削除できます。</p>
         </div>
       </div>
       <div class="clear"></div>
@@ -90,7 +102,7 @@
   <footer>
     <div class="container">
       <img src="./images/MyGourmetMap.png">
-      <p>HPグルメマップ</p>
+      <p>グルメメモマップ</p>
       <p><a href="./index.html">プライバシーポリシー</a></p>
     </div>
   </footer>
