--- a/releaseList.html
+++ b/releaseList.html
@@ -23,30 +23,65 @@
           <tr>
             <td><a href="./MyTranslation.html"><img src="./images/MyTranslation.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyTranslation.html">洋書翻訳カメラ</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E6%B4%8B%E6%9B%B8%E7%BF%BB%E8%A8%B3%E3%82%AB%E3%83%A1%E3%83%A9/id6739182384?itscg=30200&itsct=apps_box_badge&mttnsubad=6739182384" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1733961600" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyYouTube.html"><img src="./images/MyYouTube.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyYouTube.html">動画検索</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E5%8B%95%E7%94%BB%E6%A4%9C%E7%B4%A2/id6739335973?itscg=30200&itsct=apps_box_badge&mttnsubad=6739335973" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1734307200" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyPuyopuyo.html"><img src="./images/MyPuyopuyo.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyPuyopuyo.html">連鎖玉</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E9%80%A3%E9%8E%96%E7%8E%89/id6740604138?itscg=30200&itsct=apps_box_badge&mttnsubad=6740604138" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1736985600" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyTranslationPro.html"><img src="./images/MyTranslationPro.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyTranslationPro.html">洋書翻訳カメラ(多言語)</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E6%B4%8B%E6%9B%B8%E7%BF%BB%E8%A8%B3%E3%82%AB%E3%83%A1%E3%83%A9-%E5%A4%9A%E8%A8%80%E8%AA%9E/id6740789043?itscg=30200&itsct=apps_box_badge&mttnsubad=6740789043" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1737590400" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyGourmetMap.html"><img src="./images/MyGourmetMap.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyGourmetMap.html">グルメメモマップ</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E3%82%B0%E3%83%AB%E3%83%A1%E3%83%A1%E3%83%A2%E3%83%9E%E3%83%83%E3%83%97/id6741763761?itscg=30200&itsct=apps_box_badge&mttnsubad=6741763761" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1739664000" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyVision.html"><img src="./images/MyVision.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyVision.html">画像検索カメラ</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E7%94%BB%E5%83%8F%E6%A4%9C%E7%B4%A2%E3%82%AB%E3%83%A1%E3%83%A9/id6743105841?itscg=30200&itsct=apps_box_badge&mttnsubad=6743105841" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1741824000" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
           <tr>
             <td><a href="./MyRubiksCube.html"><img src="./images/MyRubiksCube.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
             <td align="left"><a href="./MyRubiksCube.html">回転箱</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E5%9B%9E%E8%BB%A2%E7%AE%B1/id6744838010?itscg=30200&itsct=apps_box_badge&mttnsubad=6744838010" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1745107200" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
           </tr>
         </table>
       </div>
