--- a/MyShoppingList.html
+++ b/MyShoppingList.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>お買い物メモ</title>
+  <title>お買い物一覧</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" href="./icon/MyShoppingList_favicon.ico">
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <a href="#"><img class="logo" src="./images/MyShoppingList.png">お買い物メモ</a>
+        <a href="#"><img class="logo" src="./images/MyShoppingList.png">お買い物一覧</a>
       </div>
       <input type="checkbox" id="menu-btn-check">
       <label for="menu-btn-check" class="menu-btn"><span class="fa fa-bars menu-icon"></span><span class="fa fa-times menu-icon-close"></span></label>
@@ -40,7 +40,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-      <p>お買い物メモは買いたいアイテムを選択できるお買い物メモを作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。</p>
+      <p>お買い物一覧は買いたいアイテムを選択できるお買い物一覧を作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
@@ -83,7 +83,7 @@
   <footer>
     <div class="container">
       <img src="./images/MyShoppingList.png">
-      <p>お買い物メモ</p>
+      <p>お買い物一覧</p>
       <p><a href="./index.html">プライバシーポリシー</a></p>
     </div>
   </footer>
