--- a/MyShoppingList.html
+++ b/MyShoppingList.html
@@ -6,6 +6,7 @@
   <title>お買い物一覧</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet4Columns.css">
   <link rel="icon" href="./icon/MyShoppingList_favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="./icon/MyShoppingList_apple-touch-icon-180x180.png">
 </head>
@@ -40,7 +41,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-      <p>お買い物一覧は買いたいアイテムを選択できるお買い物一覧を作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。</p>
+      <p>お買い物一覧は買いたいアイテムを選択できるお買い物一覧を作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。<br>アイテムの画像の登録、削除ができます。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
@@ -66,6 +67,12 @@
             <a href="./images/MyShoppingList_0003.PNG"><img src="./images/MyShoppingList_0003.PNG"></a>
           </div>
           <p class="text-contents">編集画面です。アイテムの削除、順番の変更ができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <a href="./images/MyShoppingList_0004.PNG"><img src="./images/MyShoppingList_0004.PNG"></a>
+          </div>
+          <p class="text-contents">画像画面です。アイテムの画像の登録、削除ができます。</p>
         </div>
       </div>
       <div class="clear"></div>
