--- a/MyShoppingList.html
+++ b/MyShoppingList.html
@@ -41,7 +41,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1>概要</h1>
-      <p>お買い物一覧は買いたいアイテムを選択できるお買い物一覧を作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。<br>アイテムの画像の登録、削除ができます。</p>
+      <p>お買い物一覧は買いたいアイテムを選択できるお買い物一覧を作成するアプリです。<br>アイテムの登録、削除、順番の変更ができます。<br>アイテムの検索ができます。<br>アイテムの画像の登録、削除ができます。</p>
     </div>
   </div>
   <div class="lesson-wrapper" id="section1">
@@ -54,23 +54,29 @@
           <div class="lesson-icon">
             <a href="./images/MyShoppingList_0001.PNG"><img src="./images/MyShoppingList_0001.PNG"></a>
           </div>
-          <p class="text-contents">ホーム画面です。買いたいアイテムを選択できます。</p>
+          <p class="text-contents">一覧タブのホーム画面です。買いたいアイテムを選択できます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <a href="./images/MyShoppingList_0002.PNG"><img src="./images/MyShoppingList_0002.PNG"></a>
           </div>
-          <p class="text-contents">登録画面です。アイテムを登録できます。</p>
+          <p class="text-contents">一覧タブの登録画面です。アイテムの登録ができます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <a href="./images/MyShoppingList_0003.PNG"><img src="./images/MyShoppingList_0003.PNG"></a>
           </div>
-          <p class="text-contents">編集画面です。アイテムの削除、順番の変更ができます。</p>
+          <p class="text-contents">一覧タブの編集画面です。アイテムの削除、順番の変更ができます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
             <a href="./images/MyShoppingList_0004.PNG"><img src="./images/MyShoppingList_0004.PNG"></a>
+          </div>
+          <p class="text-contents">お買い物タブのホーム画面です。アイテムの検索ができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <a href="./images/MyShoppingList_0005.PNG"><img src="./images/MyShoppingList_0005.PNG"></a>
           </div>
           <p class="text-contents">画像画面です。アイテムの画像の登録、削除ができます。</p>
         </div>
