--- a/releaseList.html
+++ b/releaseList.html
@@ -83,6 +83,15 @@
               </a>
             </td>
           </tr>
+          <tr>
+            <td><a href="./MyShoppingList.html"><img src="./images/MyShoppingList.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
+            <td align="left"><a href="./MyShoppingList.html">お買い物一覧</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E3%81%8A%E8%B2%B7%E3%81%84%E7%89%A9%E4%B8%80%E8%A6%A7/id6748355543?itscg=30200&itsct=apps_box_badge&mttnsubad=6748355543" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1753142400" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
+          </tr>
         </table>
       </div>
     </div>
