--- a/releaseList.html
+++ b/releaseList.html
@@ -92,6 +92,15 @@
               </a>
             </td>
           </tr>
+          <tr>
+            <td><a href="./MyAppleMusic.html"><img src="./images/MyAppleMusic.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
+            <td align="left"><a href="./MyAppleMusic.html">楽曲検索</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E6%A5%BD%E6%9B%B2%E6%A4%9C%E7%B4%A2/id6753196144?itscg=30200&itsct=apps_box_badge&mttnsubad=6753196144" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1759276800" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
+          </tr>
         </table>
       </div>
     </div>
