--- a/releaseList.html
+++ b/releaseList.html
@@ -101,6 +101,15 @@
               </a>
             </td>
           </tr>
+          <tr>
+            <td><a href="./MySalesReports.html"><img src="./images/MySalesReports.png" style="width: 35px; margin: 15px; vertical-align: middle;"></a></td>
+            <td align="left"><a href="./MySalesReports.html">開発者用売上報告</a></td>
+            <td>
+              <a href="https://apps.apple.com/us/app/%E9%96%8B%E7%99%BA%E8%80%85%E7%94%A8%E5%A3%B2%E4%B8%8A%E5%A0%B1%E5%91%8A/id6755353627?itscg=30200&itsct=apps_box_badge&mttnsubad=6755353627" style="display: inline-block;">
+                <img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/white/ja-jp?releaseDate=1763337600" alt="App Storeでダウンロード" style="width: 112px; height: 41px; margin: 15px; vertical-align: middle; object-fit: contain;" />
+              </a>
+            </td>
+          </tr>
         </table>
       </div>
     </div>
